// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuComponentFactory Dropdown matches the snapshot 1`] = `
<div>
  <button
    aria-haspopup="true"
    class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-dropdownButton-5 MuiButton-colorInherit"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <p
        class="MuiTypography-root MuiTypography-body1"
      >
        About
      </p>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`MenuComponentFactory Dropdown matches the snapshot 2`] = `
<div>
  <button
    aria-haspopup="true"
    class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-dropdownButton-5 MuiButton-colorInherit"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <p
        class="MuiTypography-root MuiTypography-body1"
      >
        About
      </p>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`MenuComponentFactory Link matches the snapshot 1`] = `
<div>
  <a
    aria-disabled="false"
    class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-menuButton-1"
    href="/familygroup"
    role="button"
    tabindex="0"
  >
    <span
      class="MuiButton-label"
    >
      <p
        class="MuiTypography-root makeStyles-menuText-2 MuiTypography-body1"
      >
        Family Groups
      </p>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </a>
</div>
`;

exports[`MenuComponentFactory Link matches the snapshot 2`] = `
<div>
  <a
    aria-disabled="false"
    class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-menuButton-1"
    href="/familygroup"
    role="button"
    tabindex="0"
  >
    <span
      class="MuiButton-label"
    >
      <p
        class="MuiTypography-root makeStyles-menuText-2 MuiTypography-body1"
      >
        Family Groups
      </p>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </a>
</div>
`;
